--- a/gameover.html
+++ b/gameover.html
@@ -17,8 +17,8 @@
 <body>
 
     <div>
-        <a href="gameover.html" class=" boton jugar">volver a jugar</a>
-        <a href="salir.html" class=" boton salir">salir</a>
+        <a href="gameover.html" class="boton jugar">volver a jugar</a>
+        <a href="salir.html" class="boton salir">salir</a>
     </div>
 
 
@@ -28,3 +28,4 @@
     <div>
         <img src="proyecto/pngegg.png" class="mc" alt="">
     </div>
+    <p>teamo messi</p>
